--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -24,14 +24,14 @@
     <div class="form-container">
       <div class="form-box">
         <h1 class="logo">
-          <img class="light-logo" src="./images/logo-light.png" alt="logo">
-          <img class="dark-logo" src="./images/logo-dark.png" alt="logo">
+          <img class="light-logo" src="./images/logo-light.png" alt="light-logo">
+          <img class="dark-logo" src="./images/logo-dark.png" alt="dark-logo">
         </h1>
 
         <div class="signin-form">
           <div class="form-group">
             <div class="animate-input">
-              <span>전화번호, 사용자 이름 또는 이메일</span>
+              <span>전화번호, 사용자 이름 또는 이메일 비밀번호</span>
               <input type="text">
             </div>
           </div>
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="btn-group">
-            <button class="btn-login" type="button" disabled>로그인</button>
+            <button disabled class="btn-login" type="button">로그인</button>
           </div>
           <div class="or-box">
             <div></div>
@@ -52,17 +52,16 @@
           </div>
           <div class="btn-group">
             <button class="fb-btn" type="button">
-              <img src="./images/facebook-icon.png" alt="facebook-icon">
+              <img src="./images/facebook-icon.png" alt="faceboox-icon">
               <span>페이스북으로 로그인</span>
             </button>
-            <a class="forgot-pw" href="">비밀번호를 잊으셨나요?</a>
           </div>
+          <a href="" class="forgot-pw">비밀번호를 잊으셨나요?</a>
         </div>
       </div>
 
       <div class="join-box form-box">
-        <p>
-          계정이 없으신가요?
+        <p>계정이 없으신가요?
           <a href="">가입하기</a>
         </p>
       </div>
