--- a/20230823_login-dark/index.html
+++ b/20230823_login-dark/index.html
@@ -94,6 +94,7 @@
       <p class="copyright">© 2023 Instagram from Meta</p>
     </footer>
   </div>
-  <script src="./script.js"></script>
+  <!-- <script src="./script.js"></script> -->
+  <script src="./삼항연산자.js"></script>
 </body>
 </html>
