--- a/Javascript/20230825_arrowFunction/index.html
+++ b/Javascript/20230825_arrowFunction/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="wrapper">
-
+    <button id="btn" type="button">button</button>
   </div>
   <script src="./script.js"></script>
 </body>
