🔥 불필요 코드 삭제

--- a/20230825_fitness-flex/index.html
+++ b/20230825_fitness-flex/index.html
@@ -15,21 +15,17 @@
       <div class="fiteness-list">
         <div class="fiteness-item">
           <h1>크로스 핏</h1>
-          <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
+          <p>Strength does not come from the <br>physical capacity. It comes from an <br>indomitable will.</p>
           <button type="button">Know more</button>
         </div>
-      </div>
-      <div class="fiteness-list">
         <div class="fiteness-item">
           <h1>웨이트 훈련</h1>
-          <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
+          <p>Strength does not come from the <br>physical capacity. It comes from an <br>indomitable will.</p>
           <button type="button">Know more</button>
         </div>
-      </div>
-      <div class="fiteness-list">
         <div class="fiteness-item">
           <h1>요가</h1>
-          <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
+          <p>Strength does not come from the <br>physical capacity. It comes from an <br>indomitable will.</p>
           <button type="button">Know more</button>
         </div>
       </div>
