📝 Fitness flex markup

--- a/20230825_fitness-flex/index.html
+++ b/20230825_fitness-flex/index.html
@@ -4,30 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Fiteness-flex">
-  <meta name="keywords" content="html, css, javascript">
+  <meta name="keywords" content="html, CSS, Javascript">
   <meta name="author" content="kai">
   <title>Fiteness-flex</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-    <div class="fiteness-slide">
-      <div class="fiteness-list">
-        <div class="fiteness-item">
-          <h1>크로스 핏</h1>
-          <p>Strength does not come from the <br>physical capacity. It comes from an <br>indomitable will.</p>
+    <div class="card-list">
+      <div class="card-item">
+        <h2>크로스 핏</h2>
+        <div class="caption">
+          <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
           <button type="button">Know more</button>
         </div>
-        <div class="fiteness-item">
-          <h1>웨이트 훈련</h1>
-          <p>Strength does not come from the <br>physical capacity. It comes from an <br>indomitable will.</p>
+        <img src="./images/img1.png" alt="크로스 핏">
+      </div>
+      <div class="card-item">
+        <h2>웨이트 훈련</h2>
+        <div class="caption">
+          <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
           <button type="button">Know more</button>
         </div>
-        <div class="fiteness-item">
-          <h1>요가</h1>
-          <p>Strength does not come from the <br>physical capacity. It comes from an <br>indomitable will.</p>
+        <img src="./images/img2.png" alt="웨이트 훈련">
+      </div>
+      <div class="card-item">
+        <h2>요가</h2>
+        <div class="caption">
+          <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
           <button type="button">Know more</button>
         </div>
+        <img src="./images/img3.png" alt="요가">
       </div>
     </div>
   </div>
