--- a/20230825_fitness-flex/index.html
+++ b/20230825_fitness-flex/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <div class="card-list">
-      <div class="card-item">
+      <!-- <div class="card-item">
         <h2>크로스 핏</h2>
         <div class="caption">
           <p>Strength does not come from the physical capacity. It comes from an indomitable will.</p>
@@ -35,8 +35,9 @@
           <button type="button">Know more</button>
         </div>
         <img src="./images/img3.png" alt="요가">
-      </div>
+      </div> -->
     </div>
   </div>
+  <script src="./script.js"></script>
 </body>
 </html>
