--- a/20230828_express/index.html
+++ b/20230828_express/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Node.js">
   <meta name="author" content="k">
   <title>Main page</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
