--- a/20230828_express/index.html
+++ b/20230828_express/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="Node.js">
   <meta name="author" content="k">
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   <title>Main page</title>
   <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
