--- a/20230828_express/login.html
+++ b/20230828_express/login.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Node.js">
   <meta name="author" content="k">
 
-  <title>Hello, world!</title>
+  <title>login</title>
 </head>
 <style>
   section {
