--- a/Catters/home.html
+++ b/Catters/home.html
@@ -142,6 +142,8 @@
         <div class="center-wrapper">
           <p>아무래도 마크업이 잘못된 느낌이다······.</p>
           <p>대충 모양만 잡아두고 나중에 다시 만들기로 한다.</p>
+          <span>세계관 설정 / ai npc / 사용자끼리 캐릭터 공유 가능 
+            / 캐릭터 설정시 제한 조건 - 주기적으로 ai에 안 보이는 곳에서 주입 / </span>
         </div>
       </section>
 
